Fixed layout issue

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -70,7 +70,7 @@ label {
 }
 
 .search label {
-    width: 120px;
+    width: 140px;
 }
 
 /* Collapse form elements */
